force-app/main/default/objects/bofc__BOFCAuditHistory__c/bofc__BOFCAuditHistory__c.object-meta.xml
<CustomObject>
    <label>BOFCAuditHistory</label>
    <nameField>
        <label>BOFCAuditHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCAuditHistorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>