force-app/main/default/objects/bofc__BOFCAuditHistory__c/fields/bofc__Action__c.field-meta.xml
<CustomField>
    <fullName>bofc__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open_Featured_Page</fullName>
                <label>Open Featured Page</label>
            </value>
            <value>
                <fullName>Click the Button</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>