force-app/main/default/objects/bofc__BOFCAuditHistory__c/fields/bofc__Description__c.field-meta.xml
<CustomField>
    <fullName>bofc__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>