force-app/main/default/objects/bofc__BOFCAuditHistory__c/fields/bofc__Feature__c.field-meta.xml
<CustomField>
    <fullName>bofc__Feature__c</fullName>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clone_Object</fullName>
                <label>Clone Object</label>
            </value>
            <value>
                <fullName>Clone Fields</fullName>
            </value>
            <value>
                <fullName>Clone Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>